Fixing footer overlapping the content div #6637

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,15 +1,8 @@
 .main-footer {
-  position: sticky;
   width: 100%;
   background: $color-darkblue;
   color: $color-white;
   padding: 42px 25px 20px;
-  bottom: 0;
-  margin-top: -205px;
-
-  @media #{$bp-mobile-up} {
-    margin-top: -165px;
-  }
 
   @media #{$bp-desktop-up} {
     padding: 48px 69px;
